--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -666,14 +666,6 @@ video {
   margin-top: 1.5rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .block {
   display: block;
 }
@@ -706,12 +698,32 @@ video {
   width: 100%;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
 .min-w-full {
   min-width: 100%;
 }
 
 .max-w-24 {
   max-width: 6rem;
+}
+
+.max-w-40 {
+  max-width: 10rem;
+}
+
+.max-w-5 {
+  max-width: 1.25rem;
 }
 
 .cursor-pointer {
@@ -887,16 +899,8 @@ video {
   text-align: center;
 }
 
-.text-right {
-  text-align: right;
-}
-
 .text-start {
   text-align: start;
-}
-
-.text-end {
-  text-align: end;
 }
 
 .text-2xl {
